fix layout problem

--- a/src/App.css
+++ b/src/App.css
@@ -1228,7 +1228,7 @@
   }
 
   .contact-form {
-    width: 100%;
+    width: 90%;
     margin-left: auto;
     margin-right: auto;
   }
@@ -1384,7 +1384,7 @@
   }
 }
 
-@media (min-width: 1500px), screen and (orientation: landscape) {
+@media (min-width: 1700px) {
   .home-page {
     position: relative;
   }
